[project]
name = "rag-with-llamaindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "llama-index>=0.14.22",
    "llama-index-embeddings-cohere>=0.8.0",
    "llama-index-vector-stores-pinecone>=0.7.0",
    "pinecone>=7.0.0",
    "pip-system-certs>=5.3",
]
